test/corpus/constraints.txt
================================================================================
Constraint max_len_value
================================================================================

module default {
    type User {
        required username: str {
            constraint max_len_value(100);
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (modifier)
            (identifier)
            (type)
            (declarations
              (constraint
                (identifier)
                (argspec
                  (expression
                    (edgeql_fragment)))))))))))

================================================================================
Constraint exclusive
================================================================================

module default {
    type User {
        required email: str {
            constraint exclusive;
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (modifier)
            (identifier)
            (type)
            (declarations
              (constraint
                (identifier)))))))))

================================================================================
Constraint min_value
================================================================================

module default {
    type Product {
        required quantity: int16 {
            constraint min_value(0);
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (modifier)
            (identifier)
            (type)
            (declarations
              (constraint
                (identifier)
                (argspec
                  (expression
                    (edgeql_fragment)))))))))))

================================================================================
Constraint regexp
================================================================================

module default {
    type Category {
        color: str {
            constraint regexp(r'^(#[A-Fa-f0-9]{6})?$');
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (identifier)
            (type)
            (declarations
              (constraint
                (identifier)
                (argspec
                  (expression
                    (raw_string)))))))))))

================================================================================
Multiple constraints on single property
================================================================================

module default {
    type User {
        required username: str {
            constraint exclusive;
            constraint max_len_value(50);
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (modifier)
            (identifier)
            (type)
            (declarations
              (constraint
                (identifier))
              (constraint
                (identifier)
                (argspec
                  (expression
                    (edgeql_fragment)))))))))))

================================================================================
Constraint on scalar type
================================================================================

module default {
    scalar type posint64 extending int64 {
        constraint min_value(0);
        constraint max_value(100);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (scalar_type_def
        (identifier)
        (extending
          (type))
        (declarations
          (constraint
            (identifier)
            (argspec
              (expression
                (edgeql_fragment))))
          (constraint
            (identifier)
            (argspec
              (expression
                (edgeql_fragment)))))))))
