test/corpus/enums.txt
================================================================================
Enum type declaration
================================================================================

module default {
    scalar type Status extending enum<Active, Inactive>;
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (scalar_type_def
        (identifier)
        (extending
          (enum
            (identifier)
            (identifier)))))))

================================================================================
Enum type with multiple values
================================================================================

module default {
    scalar type DocFormat extending enum<Md, Rst, Html, Text>;
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (scalar_type_def
        (identifier)
        (extending
          (enum
            (identifier)
            (identifier)
            (identifier)
            (identifier)))))))

================================================================================
Enum type used as property type
================================================================================

module default {
    scalar type Color extending enum<Red, Green, Blue>;
    
    type Product {
        required name: str;
        color: Color;
    }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier)
    (schema_declarations
      (scalar_type_def
        (identifier)
        (extending
          (enum
            (identifier)
            (identifier)
            (identifier))))
      (object_type
        (identifier)
        (declarations
          (property
            (modifier)
            (identifier)
            (type))
          (property
            (identifier)
            (type
              (identifier))))))))
